(lang dune 3.16)
(using menhir 2.0)

(name mtproto-eio)

(generate_opam_files true)

(source
 (github ManasJayanth/mtproto-eio))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name mtproto-eio)
 (synopsis "A short synopsis of mtproto-eio")
 (description "A longer description of mtproto-eio")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

